<resources>
    <string name="app_name">Safy</string>
    <string name="num_label_7">7</string>
    <string name="num_label_8">8</string>
    <string name="num_label_9">9</string>
    <string name="delete_label">DEL</string>
    <string name="num_label_4">4</string>
    <string name="num_label_5">5</string>
    <string name="num_label_6">6</string>
    <string name="multiply_label">*</string>
    <string name="num_label_1">1</string>
    <string name="num_label_2">2</string>
    <string name="num_label_3">3</string>
    <string name="minus_operation">-</string>
    <string name="plus_operation">+</string>
    <string name="divide_label">/</string>
    <string name="equals_operation">=</string>
    <string name="point_symbol">.</string>
    <string name="num_label_0">0</string>
    <string name="calc_label">Калькулятор</string>
    <string name="et_input_hint">Ваш результат будет здесь</string>
    <string name="text_back_label">back</string>
    <string name="folder_label">Папка</string>
    <string name="safy_label">SAFY</string>
    <string name="set_graphic_key_label">Установка графического ключа</string>
    <string name="wrong_key_toast">Неправильный ключ!</string>
    <string name="graphic_key_set_toast">Графический ключ задан!</string>
    <string name="open_drawer">Открыть</string>
    <string name="close_drawer">Закрыть</string>
    <string name="add_folder_option">Добавить папку</string>
    <string name="add_label">Добавление папки</string>
    <string name="folder_name_hint">Имя папки...</string>
    <string name="cancel_label">Отменить</string>
    <string name="enter_graphic_key_label">Введите графический ключ</string>
    <string name="browser_option">Браузер</string>
    <string name="safe_option">Хранилище</string>
    <string name="settings_option">Настройки</string>
    <string name="trash_option">Корзина</string>
    <string name="about_option">О нас</string>
    <string name="dark_theme_option">Темная тема</string>
    <string name="safy_caps_label">SAFY</string>
    <string name="app_icon_cd">APP ICON</string>
    <string name="add_to_safe_label">Добавление в хранилище</string>
    <string name="select_imgs_label">Выберите изображение / я</string>
    <string name="selected_for_delete_label">Выбрано для удаления</string>
    <string name="menu_label">Меню</string>
    <string name="rename_folder_option">Переименовать папку</string>
    <string name="delete_folder_option">Удалить папку</string>
    <string name="delete_image_option">Удалить картинку</string>
    <string name="rename_image_option">Редактировать картинку</string>
    <string name="slide_show_option">Слайд-шоу</string>
    <string name="delete_img_label">Удаление картинки</string>
    <string name="are_you_sure_confirm">Вы уверены в том, что хотите удалить эту картинку?</string>
    <string name="are_you_sure_confirm_folder">Вы уверены в том, что хотите удалить эту папку?</string>
    <string name="delete_folder_label">Удаление папки</string>
    <string name="delete_option">Удалить</string>
</resources>