<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_back"
    tools:context=".views.CalcActivity">

    <TextView
        android:id="@+id/txt_calc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back_simple_num_btn"
        android:fontFamily="@font/oswald_bold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/calc_label"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_input_numbers"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:enabled="false"
        android:fontFamily="@font/oswald_bold"
        android:hint="@string/et_input_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/txt_calc_label" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/oswald"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_numbers" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linear_calc_row_1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_calc_num_7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/back_simple_num_btn"
                android:gravity="center"
                android:text="@string/num_label_7"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_calc_num_8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/back_simple_num_btn"
                android:gravity="center"
                android:text="@string/num_label_8"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_calc_num_9"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/back_simple_num_btn"
                android:gravity="center"
                android:text="@string/num_label_9"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_operation_back"
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/back_operation_num"
                    android:fontFamily="@font/oswald"
                    android:gravity="center"
                    android:text="@string/text_back_label"
                    android:textSize="14sp"
                    android:theme="@style/BtnTheme" />

                <Button
                    android:id="@+id/btn_operation_del"
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/back_operation_num"
                    android:fontFamily="@font/oswald"
                    android:gravity="center"
                    android:text="@string/delete_label"
                    android:textSize="14sp"
                    android:theme="@style/BtnTheme" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_calc_row_2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_calc_num_4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/back_simple_num_btn"
                android:gravity="center"
                android:text="@string/num_label_4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_calc_num_5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/back_simple_num_btn"
                android:gravity="center"
                android:text="@string/num_label_5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_calc_num_6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/back_simple_num_btn"
                android:gravity="center"
                android:text="@string/num_label_6"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_operation_multiply"
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/back_operation_num"
                    android:gravity="center"
                    android:text="@string/multiply_label"
                    android:textSize="20sp"
                    android:theme="@style/BtnTheme" />

                <Button
                    android:id="@+id/btn_operation_divide"
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/back_operation_num"
                    android:gravity="center"
                    android:text="@string/divide_label"
                    android:textSize="20sp"
                    android:theme="@style/BtnTheme" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_calc_row_3"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_calc_num_1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/back_simple_num_btn"
                android:gravity="center"
                android:text="@string/num_label_1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_calc_num_2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/back_simple_num_btn"
                android:gravity="center"
                android:text="@string/num_label_2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_calc_num_3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/back_simple_num_btn"
                android:gravity="center"
                android:text="@string/num_label_3"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_operation_minus"
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/back_operation_num"
                    android:gravity="center"
                    android:text="@string/minus_operation"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:theme="@style/BtnTheme" />

                <Button
                    android:id="@+id/btn_operation_plus"
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/back_operation_num"
                    android:gravity="center"
                    android:text="@string/plus_operation"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:theme="@style/BtnTheme" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_calc_row_4"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_calc_num_0"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/back_simple_num_btn"
                android:gravity="center"
                android:text="@string/num_label_0"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_calc_point"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/back_simple_num_btn"
                android:gravity="center"
                android:text="@string/point_symbol"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_operation_equals"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/back_simple_num_btn"
                android:gravity="center"
                android:text="@string/equals_operation"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <!--                <Button-->
                <!--                    android:id="@+id/btn_operation_minus"-->
                <!--                    android:layout_width="50dp"-->
                <!--                    android:layout_height="40dp"-->
                <!--                    android:text="@string/minus_operation"-->
                <!--                    android:textSize="24sp" />-->

                <!--                <Button-->
                <!--                    android:id="@+id/btn_operation_plus"-->
                <!--                    android:layout_width="50dp"-->
                <!--                    android:layout_height="40dp"-->
                <!--                    android:text="@string/plus_operation"-->
                <!--                    android:textSize="20sp" />-->

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>